--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@ include "spring-jms"
 include "spring-messaging"
 include "spring-orm"
 include "spring-orm-hibernate4"
+include "spring-orm-ibatis"
 include "spring-oxm"
 include "spring-test"
 include "spring-tx"
